--- a/app/src/main/res/layout/content_inicio.xml
+++ b/app/src/main/res/layout/content_inicio.xml
@@ -15,7 +15,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¡Bienvenido!"
+        android:text="@string/saludo"
         android:textSize="40dp"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
