Action Icon Search moved to Inicio and menu option Todos added

--- a/app/src/main/res/menu/activity_inicio_drawer.xml
+++ b/app/src/main/res/menu/activity_inicio_drawer.xml
@@ -3,9 +3,9 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_search"
-            android:icon="@drawable/ic_action_search"
-            android:title="@string/buscar" />
+            android:id="@+id/nav_all"
+            android:icon="@drawable/ic_action_all"
+            android:title="@string/todos" />
         <item
             android:id="@+id/nav_categories"
             android:icon="@drawable/ic_action_categories"
