--- a/app/src/main/res/layout/activity_select_filters.xml
+++ b/app/src/main/res/layout/activity_select_filters.xml
@@ -4,9 +4,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SelectFilters">
+
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/AppTheme.AppBarOverlay">
+
+        <include android:id="@+id/miToolbar" layout="@layout/toolbar"/>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <include layout="@layout/content_filter" android:layout_below="@id/appbar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"/>
 
 </RelativeLayout>
