Finish ScrollingActivity,ListaProductos. Filters improved Correct some design errors

--- a/app/src/main/res/layout/content_filter.xml
+++ b/app/src/main/res/layout/content_filter.xml
@@ -1,74 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:layout_margin="16dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content" android:layout_height="wrap_content"
+    android:layout_margin="16dp"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv1"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/categorias"
-        android:textSize="24dp"
-        android:textColor="@color/color_PrimaryText"/>
+        android:layout_height="48dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        >
 
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/categorias"
+            android:textSize="16sp"
+            android:textColor="@color/color_PrimaryText"
+            android:layout_centerVertical="true" />
+
+        <Spinner
+            android:id="@+id/spinner_productos"
+            android:prompt="@string/aplicar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true" />
+    </RelativeLayout>
+    <!--
     <View
         android:id="@+id/div3"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/color_Divider"
         android:layout_below="@+id/tv1"
-        android:layout_margin="16dp"/>
-
-    <TextView
-        android:id="@+id/tv2"
+        />
+    -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/precio_min"
-        android:textSize="24dp"
-        android:textColor="@color/color_PrimaryText"
-        android:layout_below="@+id/div3"/>
+        android:layout_height="48dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp">
 
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/precio_min"
+            android:textSize="16dp"
+            android:textColor="@color/color_PrimaryText"
+            android:layout_below="@+id/div3"
+            android:layout_gravity="center_vertical" />
+
+    </LinearLayout>
+    <!--
     <View
         android:id="@+id/div4"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/color_Divider"
-        android:layout_below="@+id/tv2"
-        android:layout_margin="16dp"/>
-
-    <TextView
-        android:id="@+id/tv3"
+        android:layout_below="@+id/tv2"/>
+    -->
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/precio_max"
-        android:textSize="24dp"
-        android:textColor="@color/color_PrimaryText"
-        android:layout_below="@+id/div4"/>
+        android:layout_height="48dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp">
 
+        <TextView
+            android:id="@+id/tv3"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/precio_max"
+            android:textSize="16dp"
+            android:textColor="@color/color_PrimaryText"
+            android:layout_below="@+id/div4"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical" />
+
+    </LinearLayout>
+    <!--
     <View
         android:id="@+id/div5"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/color_Divider"
-        android:layout_below="@+id/tv3"
-        android:layout_margin="16dp"/>
-
+        android:layout_below="@+id/tv3"/>
+    -->
     <!--Edificios -->
-    <TextView
-        android:id="@+id/tv4"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Disponible en..."
-        android:textSize="24dp"
-        android:textColor="@color/color_PrimaryText"
-        android:layout_below="@+id/div5"/>
+        android:layout_height="48dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp">
 
+        <TextView
+            android:id="@+id/tv4"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Disponible en..."
+            android:textSize="16dp"
+            android:textColor="@color/color_PrimaryText"
+            android:layout_below="@+id/div5"
+            android:gravity="center_vertical"
+            android:layout_gravity="center_vertical"
+            />
+
+    </LinearLayout>
+    <!--
     <View
         android:id="@+id/div6"
         android:layout_width="match_parent"
         android:layout_height="0.5dp"
         android:background="@color/color_Divider"
-        android:layout_below="@+id/tv4"
-        android:layout_margin="16dp"/>
-
-</RelativeLayout>
+        android:layout_below="@+id/tv4"/>
+    -->
+</LinearLayout>
