--- a/app/src/main/res/menu/activity_inicio_drawer.xml
+++ b/app/src/main/res/menu/activity_inicio_drawer.xml
@@ -26,9 +26,9 @@
               -->
         </item>
         <item
-            android:id="@+id/nav_filter"
-            android:icon="@drawable/ic_action_name2"
-            android:title="@string/filtrar" />
+            android:id="@+id/nav_favorites"
+            android:icon="@drawable/ic_action_favorite"
+            android:title="@string/favoritos" />
     </group>
 
     <item android:title="@string/mas">
