--- a/app/src/main/res/layout/activity_categorias.xml
+++ b/app/src/main/res/layout/activity_categorias.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".ListaProductos">
@@ -17,12 +18,20 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <TabHost
-        android:id="@+id/tabhost"
+    <android.support.design.widget.TabLayout
+        android:id="@+id/tabs"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        >
+        app:tabMode="scrollable"
+        app:tabGravity="fill"/>
 
+    <android.support.v4.view.ViewPager
+        android:id="@+id/pager"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </android.support.v4.view.ViewPager>
+    <!--
         <LinearLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
@@ -37,21 +46,6 @@
                 android:id="@android:id/tabcontent"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
-                <LinearLayout
-                    android:id="@+id/tab1"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <android.support.v7.widget.RecyclerView
-                        xmlns:android="http://schemas.android.com/apk/res/android"
-                        android:id="@+id/reciclador1"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:padding="3dp"
-                        android:scrollbars="vertical"
-                        android:background="@color/color_ForegroundMaterialLight"/>
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:id="@+id/tab2"
@@ -113,7 +107,7 @@
 
         </LinearLayout>
 
-    </TabHost>
-
+    </android.support.design.widget.TabLayout>
+    -->
 
 </LinearLayout>
